--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,36 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Node modules
 node_modules/
+
+# Build output
+build/
+
+# Logs
+logs/
+*.log
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# dotenv environment variables file
+.env
+
+# MacOS files
+.DS_Store
+
+# Windows files
+Thumbs.db
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
