--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.0.0",
